Dataflow on Windows: remove usage of "/tmp/", since that is a platform-specific directory.
* In DataflowWorkerLoggingInitializer, we replace it with System.getProperty("java.io.tmpdir") making the environmentally-specified temporary directory the default logging location. This part may not be completely safe, in the unlikely case that there is some code depends on this being /tmp/, environmentally-specified temporary directory is something else, and the property isn't user-specified.

* In DataflowPipelineRunnerTest, we use actual files created by TemporaryFolder, instead of mock file names. The actual files aren't needed, but that allows us to easily construct valid file names.

[]
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=83565800